argo-app/koel/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: koel
  labels:
    kuma.io/sidecar-injection: enabled
