argo-app/koel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: koel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.11
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: koel-storage
              mountPath: /var/lib/mysql
              subPath: mariadb
      volumes:
        - name: koel-storage
          persistentVolumeClaim:
            claimName: koel-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koel
  namespace: koel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: koel
  template:
    metadata:
      labels:
        app: koel
    spec:
      containers:
        - name: koel
          image: phanan/koel:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: koel-storage
              mountPath: /music
              subPath: music
            - name: koel-storage
              mountPath: /var/www/html/public/img/covers
              subPath: covers
            - name: koel-storage
              mountPath: /var/www/html/storage/search-indexes
              subPath: search-indexes
      volumes:
        - name: koel-storage
          persistentVolumeClaim:
            claimName: koel-pvc
