argo-app/koel/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: koel
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mariadb
---
apiVersion: v1
kind: Service
metadata:
  name: koel
  namespace: koel
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: koel
  type: ClusterIP
