argo-app/koel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
        - music.jerryberry.nl
      secretName: music-ingress-tls
  rules:
    - host: music.jerryberry.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: koel
                port:
                  number: 80
